Fixed a long-standing regression that made the reactor sidebar headers look cramped. Made the delete confirmation dialog boxes a constant width, because they were acting strangely when the text was long (as in the wizard warning).

--- a/platform/ui/styles/default.css
+++ b/platform/ui/styles/default.css
@@ -691,6 +691,7 @@ A highly simplified extract of the generated HTML for a stack controller with tw
 	padding-left: 5px;
 	margin: 0px;
 	border-bottom: 0px;
+	line-height: 1.5em; /* For historical reasons - in 3.0.x and earlier, this came from atomic_enterprise.html, when the rule that is now for '.atomic_enterprise_license' was for 'body'. */
 }
 
 #sidebarMain {
@@ -1238,6 +1239,10 @@ I don't think this is being used anywhere.
 /* Before changing any of these .delete_dialog rules, make sure the results look right on both FF and IE for at least the  */
 /* following four cases: deleting a connection, deleting a reactor, deleting a workspace and re-running the wizard.        */
 
+.delete_dialog {
+	width: 500px;
+}
+
 .delete_dialog img.alert {
 	float: left;
 	padding-right: 20px;
@@ -1246,11 +1251,7 @@ I don't think this is being used anywhere.
 
 .delete_dialog .warning_text {
 	padding-top: 10px;
-	padding-bottom: 10px;	
-}
-
-.delete_dialog .save_cancel_delete {
-	width: 270px; /* This ensures that the dialog is wide enough that the buttons won't wrap around due to the alert icon. */
+	padding-bottom: 10px;
 }
 /***************************************************************************************************************************/
 
